--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -70,6 +70,7 @@ header {
 
 header h1 {
   font-family: 'Chivo', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-variant: small-caps;
   font-size: 48px; font-weight: 900;
   line-height: 1.2;
   color: #303030;
